# tk_double_scale

./: README.md  double_scale.py  pyproject.toml  tk_double_scale.py
src/: demo.py
src/tk_double_scale/: __init__.py  double_scale.py
